[package]
name = "coriander-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
dashmap = "5.5.3"
chrono = "0.4.34"
once_cell = "1.19.0"
url-track-cleaner = "0.1.5"
anyhow = "1.0.82"
linkify = "0.10.0"
